--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
         <script src="js/home/home.component.js"></script>
         <script src="js/info-box/info-box.component.js"></script>
         <script src="js/nav-bar/nav-bar.component.js"></script>
-        <script src="js/other-home/other-home.component.js"></script>
+        <script src="js/timers/timers.component.js"></script>
         <script src="js/status-box/status-box.component.js"></script>
 
         <script src="js/app.service.js"></script>
